syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message ValidateTokenRequest {
	OpToken token = 1;
}

message ValidateTokenResponse {
	Token token = 1;
}
